# nmpde-projects-matrix-free-solvers

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile
.github/workflows/: gh-pages.yml
ADR_matrix_based_example/: ADRProblem.cpp  ADRProblem.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  MatrixBasedADRSolver.cpp  MatrixBasedADRSolver.tpp  MatrixBasedTest  MatrixBasedTest.cpp  cmake_install.cmake  ex1.5-output - _0.0.vtu  ex1.5-output - _0.pvtu
common/: cmake-common.cmake
reference/adr_matrix_based/: exercise-01.cpp
reference/step37/: CMakeLists.txt  step37.cpp
src/: MatrixFreeADRSolver.tpp  ProblemData.hpp  boundaries.hpp  function_types.hpp  main.cpp  main_orig.cpp  main_rewritten.cpp  mfsolver.hpp
src/adr_matrix_based/: ADRProblem.hpp
step37/: CMakeCache.txt  Makefile  cmake_install.cmake  solution_000.0.vtu  solution_000.pvtu  solution_001.0.vtu  solution_001.pvtu  solution_002.0.vtu  solution_002.pvtu  solution_003.0.vtu  solution_003.pvtu  solution_004.0.vtu  solution_004.pvtu  solution_005.pvtu  step37
